SQLパラメータにNULLが設定することができるよう修正 テストコードは未整備
git-svn-id: file:///opt/svn/repository/projects/trunk@340 425babaa-d5dd-46a5-afc5-8c713db7da9f

--- a/coverage-report/jp/co/dk/datastoremanager/database/Transaction.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/Transaction.html
@@ -769,8 +769,8 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
       </td>
     </tr>
     <tr>
-      <td class='line'>261</td><td class='count'>0</td>
-      <td><pre class='prettyprint jmp'>			<span id='l261s0' title='Executions: 0' class='uncovered'>if (!(this.connection.isClosed())) {</span></pre></td>
+      <td class='line'>261</td><td class='count'>4</td>
+      <td><pre class='prettyprint jmp'>			<span id='l261s0' title='Executions: 4' class='covered'>if (!(this.connection.isClosed())) {</span></pre></td>
     </tr>
     <tr>
       <td class='line'>262</td><td class='count'>0</td>
