--- a/coverage-report/jp/co/dk/datastoremanager/database/DateSqlParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/DateSqlParameter.html
@@ -36,157 +36,217 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'>15</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected Date <span class='instance covered' title='Reads: 888 Writes: 31'>parameter</span>;</pre></td>
-    </tr>
-    <tr>
-      <td></td><td class='count'>33</td>
-      <td class='paths'>
-        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 2/2</span>
-        <span class='covered' onclick="showPath(this,'l17s0 l18s0 l18s1')">A: 2</span>
-        <span class='covered' onclick="showPath(this,'l17s0 l18s0 l19s0 l20s0')">B: 31</span>
-      </td>
+      <td><pre class='prettyprint'>	protected Date <span class='instance covered' title='Reads: 1776 Writes: 32'>parameter</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>17</td><td class='count'>33</td>
+      <td class='line'>17</td><td class='count'>32</td>
       <td><pre class='prettyprint covered' id='l17s0'>	DateSqlParameter(Date parameter) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>18</td><td class='count'>33</td>
-      <td><pre class='prettyprint jmp'>		<span id='l18s0' title='Executions: 33' class='covered'>if (parameter == null)</span> <span id='l18s1' title='Executions: 2' class='covered'>throw new DataStoreManagerException(SQL_PARAMETER_IS_NOT_SET);</span></pre></td>
+      <td class='line'>18</td><td class='count'>32</td>
+      <td><pre class='prettyprint covered' id='l18s0'>		this.parameter = parameter;</pre></td>
     </tr>
     <tr>
-      <td class='line'>19</td><td class='count'>31</td>
-      <td><pre class='prettyprint covered' id='l19s0'>		this.parameter = parameter;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>20</td><td class='count'>31</td>
-      <td><pre class='prettyprint covered' id='l20s0'>	}</pre></td>
+      <td class='line'>19</td><td class='count'>32</td>
+      <td><pre class='prettyprint covered' id='l19s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>22</td><td>&nbsp;</td>
+      <td class='line'>21</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>23</td><td>&nbsp;</td>
+      <td class='line'>22</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	void set(int index, PreparedStatement statement) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>24</td><td>&nbsp;</td>
+      <td class='line'>23</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>25</td><td class='count'>13</td>
-      <td><pre class='prettyprint covered' id='l25s0'>			statement.setDate(index, new java.sql.Date(this.parameter.getTime()));</pre></td>
+      <td></td><td class='count'>13</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='uncovered' onclick="showPath(this,'l24s0 l27s0 l32s0')">A: 0</span>
+        <span class='covered' onclick="showPath(this,'l24s0 l25s0 l32s0')">B: 13</span>
+      </td>
     </tr>
     <tr>
-      <td class='line'>26</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l26s0'>		} catch (SQLException e) {</pre></td>
+      <td class='line'>24</td><td class='count'>13</td>
+      <td><pre class='prettyprint jmp'>			<span id='l24s0' title='Executions: 13' class='covered'>if (this.parameter != null)</span> <span id='l24s1' title='Executions: 13' class='covered'>{</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>25</td><td class='count'>13</td>
+      <td><pre class='prettyprint covered' id='l25s0'>				statement.setDate(index, new java.sql.Date(this.parameter.getTime()));</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>26</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>			} else {</pre></td>
     </tr>
     <tr>
       <td class='line'>27</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l27s0'>			throw new DataStoreManagerException(AN_EXCEPTION_OCCURRED_WHEN_PERFORMING_THE_SET_PARAMETERS_TO_SQL, e);</pre></td>
+      <td><pre class='prettyprint uncovered' id='l27s0'>				statement.setDate(index, null);</pre></td>
     </tr>
     <tr>
       <td class='line'>28</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>			}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>29</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l29s0'>		} catch (SQLException e) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>30</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l30s0'>			throw new DataStoreManagerException(AN_EXCEPTION_OCCURRED_WHEN_PERFORMING_THE_SET_PARAMETERS_TO_SQL, e);</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>31</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>29</td><td class='count'>13</td>
-      <td><pre class='prettyprint covered' id='l29s0'>	}</pre></td>
+      <td class='line'>32</td><td class='count'>13</td>
+      <td><pre class='prettyprint covered' id='l32s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>31</td><td>&nbsp;</td>
+      <td class='line'>34</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>32</td><td>&nbsp;</td>
+      <td class='line'>35</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public boolean equals(Object object) {</pre></td>
     </tr>
     <tr>
       <td></td><td class='count'>213</td>
       <td class='paths'>
         <span style='cursor:default; background-color:#40bf00' onclick='hidePath()'>Path coverage: 3/4</span>
-        <span class='covered' onclick="showPath(this,'l33s0 l33s1')">A: 3</span>
-        <span class='uncovered' onclick="showPath(this,'l33s0 l34s0 l34s1')">B: 0</span>
-        <span class='covered' onclick="showPath(this,'l33s0 l34s0 l35s0 l36s0 l36s1')">C: 108</span>
-        <span class='covered' onclick="showPath(this,'l33s0 l34s0 l35s0 l36s0 l37s0')">D: 102</span>
+        <span class='covered' onclick="showPath(this,'l36s0 l36s1')">A: 3</span>
+        <span class='uncovered' onclick="showPath(this,'l36s0 l37s0 l37s1')">B: 0</span>
+        <span class='covered' onclick="showPath(this,'l36s0 l37s0 l38s0 l39s0 l39s1')">C: 108</span>
+        <span class='covered' onclick="showPath(this,'l36s0 l37s0 l38s0 l39s0 l40s0')">D: 102</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>33</td><td class='count'>213</td>
-      <td><pre class='prettyprint jmp'>		<span id='l33s0' title='Executions: 213' class='covered'>if (object == null)</span> <span id='l33s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
+      <td class='line'>36</td><td class='count'>213</td>
+      <td><pre class='prettyprint jmp'>		<span id='l36s0' title='Executions: 213' class='covered'>if (object == null)</span> <span id='l36s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>34</td><td class='count'>210</td>
-      <td><pre class='prettyprint jmp'>		<span id='l34s0' title='Executions: 210' class='covered'>if (!(object instanceof DateSqlParameter)) return false;</span></pre></td>
+      <td class='line'>37</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l37s0' title='Executions: 210' class='covered'>if (!(object instanceof DateSqlParameter)) return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>35</td><td class='count'>210</td>
-      <td><pre class='prettyprint covered' id='l35s0'>		DateSqlParameter thisClassObj = (DateSqlParameter) object;</pre></td>
+      <td class='line'>38</td><td class='count'>210</td>
+      <td><pre class='prettyprint covered' id='l38s0'>		DateSqlParameter thisClassObj = (DateSqlParameter) object;</pre></td>
     </tr>
     <tr>
-      <td class='line'>36</td><td class='count'>210</td>
-      <td><pre class='prettyprint jmp'>		<span id='l36s0' title='Executions: 210' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
+      <td class='line'>39</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l39s0' title='Executions: 210' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>37</td><td class='count'>102</td>
-      <td><pre class='prettyprint covered' id='l37s0'>		return false;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>38</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	}</pre></td>
-    </tr>
-    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
-    <tr>
-      <td class='line'>40</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	@Override</pre></td>
+      <td class='line'>40</td><td class='count'>102</td>
+      <td><pre class='prettyprint covered' id='l40s0'>		return false;</pre></td>
     </tr>
     <tr>
       <td class='line'>41</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>42</td><td class='count'>856</td>
-      <td><pre class='prettyprint covered' id='l42s0'>		return this.parameter.hashCode() * 17;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>43</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>45</td><td>&nbsp;</td>
+      <td class='line'>43</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>46</td><td>&nbsp;</td>
+      <td class='line'>44</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
+    </tr>
+    <tr>
+      <td></td><td class='count'>856</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='covered' onclick="showPath(this,'l45s0 l46s0')">A: 856</span>
+        <span class='uncovered' onclick="showPath(this,'l45s0 l48s0')">B: 0</span>
+      </td>
+    </tr>
+    <tr>
+      <td class='line'>45</td><td class='count'>856</td>
+      <td><pre class='prettyprint jmp'>		<span id='l45s0' title='Executions: 856' class='covered'>if (this.parameter != null)</span> <span id='l45s1' title='Executions: 856' class='covered'>{</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>46</td><td class='count'>856</td>
+      <td><pre class='prettyprint covered' id='l46s0'>			return this.parameter.hashCode() * 17;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>47</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		} else {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>48</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l48s0'>			return -1;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>49</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>50</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	}</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'>52</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	@Override</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>53</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public String toString() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>47</td><td class='count'>19</td>
-      <td><pre class='prettyprint covered' id='l47s0'>		StringBuilder sb = new StringBuilder();</pre></td>
+      <td></td><td class='count'>19</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='covered' onclick="showPath(this,'l54s0 l55s0 l58s0')">A: 19</span>
+        <span class='uncovered' onclick="showPath(this,'l54s0 l60s0')">B: 0</span>
+      </td>
     </tr>
     <tr>
-      <td class='line'>48</td><td class='count'>19</td>
-      <td><pre class='prettyprint covered' id='l48s0'>		SimpleDateFormat sdf = new SimpleDateFormat("yyyyMMddHHmmss");</pre></td>
+      <td class='line'>54</td><td class='count'>19</td>
+      <td><pre class='prettyprint jmp'>		<span id='l54s0' title='Executions: 19' class='covered'>if (this.parameter != null)</span> <span id='l54s1' title='Executions: 19' class='covered'>{</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>49</td><td class='count'>19</td>
-      <td><pre class='prettyprint covered' id='l49s0'>		sb.append(sdf.format(this.parameter).toString()).append("(date)");</pre></td>
+      <td class='line'>55</td><td class='count'>19</td>
+      <td><pre class='prettyprint covered' id='l55s0'>			StringBuilder sb = new StringBuilder();</pre></td>
     </tr>
     <tr>
-      <td class='line'>50</td><td class='count'>19</td>
-      <td><pre class='prettyprint covered' id='l50s0'>		return sb.toString();</pre></td>
+      <td class='line'>56</td><td class='count'>19</td>
+      <td><pre class='prettyprint covered' id='l56s0'>			SimpleDateFormat sdf = new SimpleDateFormat("yyyyMMddHHmmss");</pre></td>
     </tr>
     <tr>
-      <td class='line'>51</td><td>&nbsp;</td>
+      <td class='line'>57</td><td class='count'>19</td>
+      <td><pre class='prettyprint covered' id='l57s0'>			sb.append(sdf.format(this.parameter).toString()).append("(date)");</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>58</td><td class='count'>19</td>
+      <td><pre class='prettyprint covered' id='l58s0'>			return sb.toString();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>59</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		} else {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>60</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l60s0'>			return "null(date)";</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>61</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>62</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	}</pre></td>
     </tr>
     <tr>
-      <td class='line'>52</td><td>&nbsp;</td>
+      <td class='line'>63</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>}</pre></td>
     </tr>
   </table>
