--- a/coverage-report/jp/co/dk/datastoremanager/database/ObjectSqlParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/ObjectSqlParameter.html
@@ -34,15 +34,7 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'>13</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected Serializable <span class='instance covered' title='Reads: 434 Writes: 9'>parameter</span>;</pre></td>
-    </tr>
-    <tr>
-      <td></td><td class='count'>10</td>
-      <td class='paths'>
-        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 2/2</span>
-        <span class='covered' onclick="showPath(this,'l15s0 l16s0 l16s1')">A: 1</span>
-        <span class='covered' onclick="showPath(this,'l15s0 l16s0 l17s0 l18s0')">B: 9</span>
-      </td>
+      <td><pre class='prettyprint'>	protected Serializable <span class='instance covered' title='Reads: 868 Writes: 10'>parameter</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -51,136 +43,204 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
     </tr>
     <tr>
       <td class='line'>16</td><td class='count'>10</td>
-      <td><pre class='prettyprint jmp'>		<span id='l16s0' title='Executions: 10' class='covered'>if (parameter == null )</span> <span id='l16s1' title='Executions: 1' class='covered'>throw new DataStoreManagerException(SQL_PARAMETER_IS_NOT_SET);</span></pre></td>
+      <td><pre class='prettyprint covered' id='l16s0'>		this.parameter = parameter;</pre></td>
     </tr>
     <tr>
-      <td class='line'>17</td><td class='count'>9</td>
-      <td><pre class='prettyprint covered' id='l17s0'>		this.parameter = parameter;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>18</td><td class='count'>9</td>
-      <td><pre class='prettyprint covered' id='l18s0'>	} </pre></td>
+      <td class='line'>17</td><td class='count'>10</td>
+      <td><pre class='prettyprint covered' id='l17s0'>	} </pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>20</td><td>&nbsp;</td>
+      <td class='line'>19</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>21</td><td>&nbsp;</td>
+      <td class='line'>20</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	void set(int index, PreparedStatement statement) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>22</td><td>&nbsp;</td>
+      <td class='line'>21</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>23</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l23s0'>			statement.setObject(index, this.parameter);</pre></td>
+      <td></td><td class='count'>1</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='uncovered' onclick="showPath(this,'l22s0 l25s0 l30s0')">A: 0</span>
+        <span class='covered' onclick="showPath(this,'l22s0 l23s0 l30s0')">B: 1</span>
+      </td>
     </tr>
     <tr>
-      <td class='line'>24</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l24s0'>		} catch (SQLException e) {</pre></td>
+      <td class='line'>22</td><td class='count'>1</td>
+      <td><pre class='prettyprint jmp'>			<span id='l22s0' title='Executions: 1' class='covered'>if (this.parameter != null)</span> <span id='l22s1' title='Executions: 1' class='covered'>{</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>23</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l23s0'>				statement.setObject(index, this.parameter);</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>24</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>			} else {</pre></td>
     </tr>
     <tr>
       <td class='line'>25</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l25s0'>			throw new DataStoreManagerException(AN_EXCEPTION_OCCURRED_WHEN_PERFORMING_THE_SET_PARAMETERS_TO_SQL, e);</pre></td>
+      <td><pre class='prettyprint uncovered' id='l25s0'>				statement.setObject(index, null);</pre></td>
     </tr>
     <tr>
       <td class='line'>26</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>			}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>27</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l27s0'>		} catch (SQLException e) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>28</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l28s0'>			throw new DataStoreManagerException(AN_EXCEPTION_OCCURRED_WHEN_PERFORMING_THE_SET_PARAMETERS_TO_SQL, e);</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>29</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>27</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l27s0'>	}</pre></td>
+      <td class='line'>30</td><td class='count'>1</td>
+      <td><pre class='prettyprint covered' id='l30s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>29</td><td>&nbsp;</td>
+      <td class='line'>32</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>30</td><td>&nbsp;</td>
+      <td class='line'>33</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public boolean equals(Object object) {</pre></td>
     </tr>
     <tr>
       <td></td><td class='count'>213</td>
       <td class='paths'>
         <span style='cursor:default; background-color:#40bf00' onclick='hidePath()'>Path coverage: 3/4</span>
-        <span class='covered' onclick="showPath(this,'l31s0 l31s1')">A: 3</span>
-        <span class='uncovered' onclick="showPath(this,'l31s0 l32s0 l32s1')">B: 0</span>
-        <span class='covered' onclick="showPath(this,'l31s0 l32s0 l33s0 l34s0 l34s1')">C: 108</span>
-        <span class='covered' onclick="showPath(this,'l31s0 l32s0 l33s0 l34s0 l35s0')">D: 102</span>
+        <span class='covered' onclick="showPath(this,'l34s0 l34s1')">A: 3</span>
+        <span class='uncovered' onclick="showPath(this,'l34s0 l35s0 l35s1')">B: 0</span>
+        <span class='covered' onclick="showPath(this,'l34s0 l35s0 l36s0 l37s0 l37s1')">C: 108</span>
+        <span class='covered' onclick="showPath(this,'l34s0 l35s0 l36s0 l37s0 l38s0')">D: 102</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>31</td><td class='count'>213</td>
-      <td><pre class='prettyprint jmp'>		<span id='l31s0' title='Executions: 213' class='covered'>if (object == null)</span> <span id='l31s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
+      <td class='line'>34</td><td class='count'>213</td>
+      <td><pre class='prettyprint jmp'>		<span id='l34s0' title='Executions: 213' class='covered'>if (object == null)</span> <span id='l34s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>32</td><td class='count'>210</td>
-      <td><pre class='prettyprint jmp'>		<span id='l32s0' title='Executions: 210' class='covered'>if (!(object instanceof ObjectSqlParameter)) return false;</span></pre></td>
+      <td class='line'>35</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l35s0' title='Executions: 210' class='covered'>if (!(object instanceof ObjectSqlParameter)) return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>33</td><td class='count'>210</td>
-      <td><pre class='prettyprint covered' id='l33s0'>		ObjectSqlParameter thisClassObj = (ObjectSqlParameter) object;</pre></td>
+      <td class='line'>36</td><td class='count'>210</td>
+      <td><pre class='prettyprint covered' id='l36s0'>		ObjectSqlParameter thisClassObj = (ObjectSqlParameter) object;</pre></td>
     </tr>
     <tr>
-      <td class='line'>34</td><td class='count'>210</td>
-      <td><pre class='prettyprint jmp'>		<span id='l34s0' title='Executions: 210' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
+      <td class='line'>37</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l37s0' title='Executions: 210' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>35</td><td class='count'>102</td>
-      <td><pre class='prettyprint covered' id='l35s0'>		return false;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>36</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	}</pre></td>
-    </tr>
-    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
-    <tr>
-      <td class='line'>38</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	@Override</pre></td>
+      <td class='line'>38</td><td class='count'>102</td>
+      <td><pre class='prettyprint covered' id='l38s0'>		return false;</pre></td>
     </tr>
     <tr>
       <td class='line'>39</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>40</td><td class='count'>426</td>
-      <td><pre class='prettyprint covered' id='l40s0'>		return this.parameter.hashCode() * 17;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>41</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>43</td><td>&nbsp;</td>
+      <td class='line'>41</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>44</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	public String toString() {</pre></td>
+      <td class='line'>42</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>45</td><td class='count'>7</td>
-      <td><pre class='prettyprint covered' id='l45s0'>		StringBuilder sb = new StringBuilder();</pre></td>
+      <td></td><td class='count'>426</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='covered' onclick="showPath(this,'l43s0 l44s0')">A: 426</span>
+        <span class='uncovered' onclick="showPath(this,'l43s0 l46s0')">B: 0</span>
+      </td>
     </tr>
     <tr>
-      <td class='line'>46</td><td class='count'>7</td>
-      <td><pre class='prettyprint covered' id='l46s0'>		sb.append(this.parameter).append("(object)");</pre></td>
+      <td class='line'>43</td><td class='count'>426</td>
+      <td><pre class='prettyprint jmp'>		<span id='l43s0' title='Executions: 426' class='covered'>if (this.parameter != null)</span> <span id='l43s1' title='Executions: 426' class='covered'>{</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>47</td><td class='count'>7</td>
-      <td><pre class='prettyprint covered' id='l47s0'>		return sb.toString();</pre></td>
+      <td class='line'>44</td><td class='count'>426</td>
+      <td><pre class='prettyprint covered' id='l44s0'>			return this.parameter.hashCode() * 17;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>45</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		} else {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>46</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l46s0'>			return -1;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>47</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
       <td class='line'>48</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	}</pre></td>
     </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>49</td><td>&nbsp;</td>
+      <td class='line'>50</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	@Override</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>51</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public String toString() {</pre></td>
+    </tr>
+    <tr>
+      <td></td><td class='count'>7</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='covered' onclick="showPath(this,'l52s0 l53s0 l55s0')">A: 7</span>
+        <span class='uncovered' onclick="showPath(this,'l52s0 l57s0')">B: 0</span>
+      </td>
+    </tr>
+    <tr>
+      <td class='line'>52</td><td class='count'>7</td>
+      <td><pre class='prettyprint jmp'>		<span id='l52s0' title='Executions: 7' class='covered'>if (this.parameter != null)</span> <span id='l52s1' title='Executions: 7' class='covered'>{</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>53</td><td class='count'>7</td>
+      <td><pre class='prettyprint covered' id='l53s0'>			StringBuilder sb = new StringBuilder();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>54</td><td class='count'>7</td>
+      <td><pre class='prettyprint covered' id='l54s0'>			sb.append(this.parameter).append("(object)");</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>55</td><td class='count'>7</td>
+      <td><pre class='prettyprint covered' id='l55s0'>			return sb.toString();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>56</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		} else {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>57</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l57s0'>			return "null(object)";</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>58</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>59</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>60</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>}</pre></td>
     </tr>
   </table>
