--- a/coverage-report/jp/co/dk/datastoremanager/database/StringSqlParameter.html
+++ b/coverage-report/jp/co/dk/datastoremanager/database/StringSqlParameter.html
@@ -33,154 +33,213 @@ import jp.co.dk.datastoremanager.exception.DataStoreManagerException;
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
       <td class='line'>12</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 922 Writes: 62'>parameter</span>;</pre></td>
-    </tr>
-    <tr>
-      <td></td><td class='count'>66</td>
-      <td class='paths'>
-        <span style='cursor:default; background-color:#00ff00' onclick='hidePath()'>Path coverage: 3/3</span>
-        <span class='covered' onclick="showPath(this,'l14s0 l15s0 l15s2')">A: 2</span>
-        <span class='covered' onclick="showPath(this,'l14s0 l15s0 l15s1 l15s2')">B: 2</span>
-        <span class='covered' onclick="showPath(this,'l14s0 l15s0 l15s1 l16s0 l17s0')">C: 62</span>
-      </td>
+      <td><pre class='prettyprint'>	protected String <span class='instance covered' title='Reads: 1844 Writes: 64'>parameter</span>;</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>14</td><td class='count'>66</td>
+      <td class='line'>14</td><td class='count'>64</td>
       <td><pre class='prettyprint covered' id='l14s0'>	StringSqlParameter(String parameter) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>15</td><td class='count'>66</td>
-      <td><pre class='prettyprint jmp'>		<span id='l15s0' title='Executions: 66' class='covered'>if (parameter == null</span> || <span id='l15s1' title='Executions: 64' class='covered'>parameter.equals("")) throw new DataStoreManagerException(SQL_PARAMETER_IS_NOT_SET);</span></pre></td>
+      <td class='line'>15</td><td class='count'>64</td>
+      <td><pre class='prettyprint covered' id='l15s0'>		this.parameter = parameter;</pre></td>
     </tr>
     <tr>
-      <td class='line'>16</td><td class='count'>62</td>
-      <td><pre class='prettyprint covered' id='l16s0'>		this.parameter = parameter;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>17</td><td class='count'>62</td>
-      <td><pre class='prettyprint covered' id='l17s0'>	} </pre></td>
+      <td class='line'>16</td><td class='count'>64</td>
+      <td><pre class='prettyprint covered' id='l16s0'>	} </pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>19</td><td>&nbsp;</td>
+      <td class='line'>18</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>20</td><td>&nbsp;</td>
+      <td class='line'>19</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	void set(int index, PreparedStatement statement) throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>21</td><td>&nbsp;</td>
+      <td class='line'>20</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		try {</pre></td>
     </tr>
     <tr>
-      <td class='line'>22</td><td class='count'>41</td>
-      <td><pre class='prettyprint covered' id='l22s0'>			statement.setString(index, this.parameter);</pre></td>
+      <td></td><td class='count'>41</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='uncovered' onclick="showPath(this,'l21s0 l24s0 l29s0')">A: 0</span>
+        <span class='covered' onclick="showPath(this,'l21s0 l22s0 l29s0')">B: 41</span>
+      </td>
     </tr>
     <tr>
-      <td class='line'>23</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l23s0'>		} catch (SQLException e) {</pre></td>
+      <td class='line'>21</td><td class='count'>41</td>
+      <td><pre class='prettyprint jmp'>			<span id='l21s0' title='Executions: 41' class='covered'>if (this.parameter != null)</span> <span id='l21s1' title='Executions: 41' class='covered'>{</span> </pre></td>
+    </tr>
+    <tr>
+      <td class='line'>22</td><td class='count'>41</td>
+      <td><pre class='prettyprint covered' id='l22s0'>				statement.setString(index, this.parameter);</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>23</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>			} else {</pre></td>
     </tr>
     <tr>
       <td class='line'>24</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l24s0'>			throw new DataStoreManagerException(AN_EXCEPTION_OCCURRED_WHEN_PERFORMING_THE_SET_PARAMETERS_TO_SQL, e);</pre></td>
+      <td><pre class='prettyprint uncovered' id='l24s0'>				statement.setString(index, null);</pre></td>
     </tr>
     <tr>
       <td class='line'>25</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>			}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>26</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l26s0'>		} catch (SQLException e) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>27</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l27s0'>			throw new DataStoreManagerException(AN_EXCEPTION_OCCURRED_WHEN_PERFORMING_THE_SET_PARAMETERS_TO_SQL, e);</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>28</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>26</td><td class='count'>41</td>
-      <td><pre class='prettyprint covered' id='l26s0'>	}</pre></td>
+      <td class='line'>29</td><td class='count'>41</td>
+      <td><pre class='prettyprint covered' id='l29s0'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>28</td><td>&nbsp;</td>
+      <td class='line'>31</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>29</td><td>&nbsp;</td>
+      <td class='line'>32</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public boolean equals(Object object) {</pre></td>
     </tr>
     <tr>
       <td></td><td class='count'>213</td>
       <td class='paths'>
         <span style='cursor:default; background-color:#40bf00' onclick='hidePath()'>Path coverage: 3/4</span>
-        <span class='covered' onclick="showPath(this,'l30s0 l30s1')">A: 3</span>
-        <span class='uncovered' onclick="showPath(this,'l30s0 l31s0 l31s1')">B: 0</span>
-        <span class='covered' onclick="showPath(this,'l30s0 l31s0 l32s0 l33s0 l33s1')">C: 108</span>
-        <span class='covered' onclick="showPath(this,'l30s0 l31s0 l32s0 l33s0 l34s0')">D: 102</span>
+        <span class='covered' onclick="showPath(this,'l33s0 l33s1')">A: 3</span>
+        <span class='uncovered' onclick="showPath(this,'l33s0 l34s0 l34s1')">B: 0</span>
+        <span class='covered' onclick="showPath(this,'l33s0 l34s0 l35s0 l36s0 l36s1')">C: 108</span>
+        <span class='covered' onclick="showPath(this,'l33s0 l34s0 l35s0 l36s0 l37s0')">D: 102</span>
       </td>
     </tr>
     <tr>
-      <td class='line'>30</td><td class='count'>213</td>
-      <td><pre class='prettyprint jmp'>		<span id='l30s0' title='Executions: 213' class='covered'>if (object == null)</span> <span id='l30s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
+      <td class='line'>33</td><td class='count'>213</td>
+      <td><pre class='prettyprint jmp'>		<span id='l33s0' title='Executions: 213' class='covered'>if (object == null)</span> <span id='l33s1' title='Executions: 3' class='covered'>return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>31</td><td class='count'>210</td>
-      <td><pre class='prettyprint jmp'>		<span id='l31s0' title='Executions: 210' class='covered'>if (!(object instanceof StringSqlParameter)) return false;</span></pre></td>
+      <td class='line'>34</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l34s0' title='Executions: 210' class='covered'>if (!(object instanceof StringSqlParameter)) return false;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>32</td><td class='count'>210</td>
-      <td><pre class='prettyprint covered' id='l32s0'>		StringSqlParameter thisClassObj = (StringSqlParameter) object;</pre></td>
+      <td class='line'>35</td><td class='count'>210</td>
+      <td><pre class='prettyprint covered' id='l35s0'>		StringSqlParameter thisClassObj = (StringSqlParameter) object;</pre></td>
     </tr>
     <tr>
-      <td class='line'>33</td><td class='count'>210</td>
-      <td><pre class='prettyprint jmp'>		<span id='l33s0' title='Executions: 210' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
+      <td class='line'>36</td><td class='count'>210</td>
+      <td><pre class='prettyprint jmp'>		<span id='l36s0' title='Executions: 210' class='covered'>if (thisClassObj.hashCode() == this.hashCode()) return true;</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>34</td><td class='count'>102</td>
-      <td><pre class='prettyprint covered' id='l34s0'>		return false;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>35</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	}</pre></td>
-    </tr>
-    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
-    <tr>
-      <td class='line'>37</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	@Override</pre></td>
+      <td class='line'>37</td><td class='count'>102</td>
+      <td><pre class='prettyprint covered' id='l37s0'>		return false;</pre></td>
     </tr>
     <tr>
       <td class='line'>38</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>39</td><td class='count'>856</td>
-      <td><pre class='prettyprint covered' id='l39s0'>		return this.parameter.hashCode() * 17;</pre></td>
-    </tr>
-    <tr>
-      <td class='line'>40</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	}</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>42</td><td>&nbsp;</td>
+      <td class='line'>40</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	@Override</pre></td>
     </tr>
     <tr>
-      <td class='line'>43</td><td>&nbsp;</td>
-      <td><pre class='prettyprint'>	public String toString() {</pre></td>
+      <td class='line'>41</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public int hashCode() {</pre></td>
     </tr>
     <tr>
-      <td class='line'>44</td><td class='count'>25</td>
-      <td><pre class='prettyprint covered' id='l44s0'>		StringBuilder sb = new StringBuilder();</pre></td>
+      <td></td><td class='count'>856</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='covered' onclick="showPath(this,'l42s0 l43s0')">A: 856</span>
+        <span class='uncovered' onclick="showPath(this,'l42s0 l45s0')">B: 0</span>
+      </td>
     </tr>
     <tr>
-      <td class='line'>45</td><td class='count'>25</td>
-      <td><pre class='prettyprint covered' id='l45s0'>		sb.append(this.parameter).append("(string)");</pre></td>
+      <td class='line'>42</td><td class='count'>856</td>
+      <td><pre class='prettyprint jmp'>		<span id='l42s0' title='Executions: 856' class='covered'>if (this.parameter != null)</span> <span id='l42s1' title='Executions: 856' class='covered'>{</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>46</td><td class='count'>25</td>
-      <td><pre class='prettyprint covered' id='l46s0'>		return sb.toString();</pre></td>
+      <td class='line'>43</td><td class='count'>856</td>
+      <td><pre class='prettyprint covered' id='l43s0'>			return this.parameter.hashCode() * 17;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>44</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		} else {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>45</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l45s0'>			return -1;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>46</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
       <td class='line'>47</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	}</pre></td>
     </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
-      <td class='line'>48</td><td>&nbsp;</td>
+      <td class='line'>49</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	@Override</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>50</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public String toString() {</pre></td>
+    </tr>
+    <tr>
+      <td></td><td class='count'>25</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#7f8000' onclick='hidePath()'>Path coverage: 1/2</span>
+        <span class='covered' onclick="showPath(this,'l51s0 l52s0 l54s0')">A: 25</span>
+        <span class='uncovered' onclick="showPath(this,'l51s0 l56s0')">B: 0</span>
+      </td>
+    </tr>
+    <tr>
+      <td class='line'>51</td><td class='count'>25</td>
+      <td><pre class='prettyprint jmp'>		<span id='l51s0' title='Executions: 25' class='covered'>if (this.parameter != null)</span> <span id='l51s1' title='Executions: 25' class='covered'>{</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>52</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l52s0'>			StringBuilder sb = new StringBuilder();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>53</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l53s0'>			sb.append(this.parameter).append("(string)");</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>54</td><td class='count'>25</td>
+      <td><pre class='prettyprint covered' id='l54s0'>			return sb.toString();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>55</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		} else {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>56</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l56s0'>			return "null(string)";</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>57</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>58</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>59</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>}</pre></td>
     </tr>
   </table>
