データストアマネージャにコミット、ロールバックを追加 finishtrunsactionに例外が発生していた場合はrollback、 エラー未発生時はcommitされるよう修正
git-svn-id: file:///opt/svn/repository/projects/trunk@368 425babaa-d5dd-46a5-afc5-8c713db7da9f

--- a/coverage-report/jp/co/dk/datastoremanager/DataStoreManager.html
+++ b/coverage-report/jp/co/dk/datastoremanager/DataStoreManager.html
@@ -68,7 +68,7 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>35</td><td class='count'>7</td>
-      <td><pre class='prettyprint covered' id='l35s0'>	protected Map&lt;String, DataStore> <span class='instance uncovered' title='Reads: 6 Writes: 7'>dataStores</span> = new HashMap&lt;String, DataStore>();</pre></td>
+      <td><pre class='prettyprint covered' id='l35s0'>	protected Map&lt;String, DataStore> <span class='instance uncovered' title='Reads: 5 Writes: 7'>dataStores</span> = new HashMap&lt;String, DataStore>();</pre></td>
     </tr>
     <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
     <tr>
@@ -154,11 +154,11 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     </tr>
     <tr>
       <td class='line'>65</td><td class='count'>5</td>
-      <td><pre class='prettyprint covered' id='l65s0'>		for (String name : this.dataStores.keySet()) {</pre></td>
+      <td><pre class='prettyprint covered' id='l65s0'>		for (DataStore dataStore : this.dataStores.values()) {</pre></td>
     </tr>
     <tr>
       <td class='line'>66</td><td class='count'>1</td>
-      <td><pre class='prettyprint covered' id='l66s0'>			this.dataStores.get(name).startTransaction();</pre></td>
+      <td><pre class='prettyprint covered' id='l66s0'>			dataStore.startTransaction();</pre></td>
     </tr>
     <tr>
       <td class='line'>67</td><td>&nbsp;</td>
@@ -218,6 +218,117 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
     <tr>
       <td class='line'></td><td>&nbsp;</td>
       <td class='comment' onclick='showHideLines(this)'><div>	/**
+	 * このトランザクションに対してコミットを実行します。
+	 * 
+	 * @throws DataStoreManagerException コミットに失敗した場合
+	 */</div><span>	/*...*/</span></td>
+    </tr>
+    <tr>
+      <td class='line'>89</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public void commit() throws DataStoreManagerException {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>90</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l90s0'>		this.defaultDataStore.commit();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>91</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l91s0'>		for (String name : dataStores.keySet()) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>92</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l92s0'>			this.dataStores.get(name).commit();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>93</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>94</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l94s0'>	}</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'></td><td>&nbsp;</td>
+      <td class='comment' onclick='showHideLines(this)'><div>	/**
+	 * このトランザクションに対してロールバックを実行します。
+	 * 
+	 * @throws DataStoreManagerException ロールバックに失敗した場合
+	 */</div><span>	/*...*/</span></td>
+    </tr>
+    <tr>
+      <td class='line'>101</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public void rollback() throws DataStoreManagerException {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>102</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l102s0'>		this.defaultDataStore.rollback();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>103</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l103s0'>		for (String name : dataStores.keySet()) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>104</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l104s0'>			this.dataStores.get(name).rollback();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>105</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>106</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l106s0'>	}</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'></td><td>&nbsp;</td>
+      <td class='comment' onclick='showHideLines(this)'><div>	/**
+	 * このデータストアにてエラーが発生したかを判定します。
+	 * 
+	 * @return 判定結果（true=エラーが発生した、false=エラーは発生していない）
+	 */</div><span>	/*...*/</span></td>
+    </tr>
+    <tr>
+      <td class='line'>113</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	public boolean hasError() {</pre></td>
+    </tr>
+    <tr>
+      <td></td><td class='count'>0</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/2</span>
+        <span class='uncovered' onclick="showPath(this,'l114s0 l114s1')">A: 0</span>
+        <span class='uncovered' onclick="showPath(this,'l114s0 l115s0 l118s0')">B: 0</span>
+      </td>
+    </tr>
+    <tr>
+      <td class='line'>114</td><td class='count'>0</td>
+      <td><pre class='prettyprint jmp'>		<span id='l114s0' title='Executions: 0' class='uncovered'>if (this.defaultDataStore.hasError()) return true;</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>115</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l115s0'>		for (String name : dataStores.keySet()) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>116</td><td class='count'>0</td>
+      <td><pre class='prettyprint jmp'>			<span id='l116s0' title='Executions: 0' class='uncovered'>if (this.dataStores.get(name).hasError()) return true;</span></pre></td>
+    </tr>
+    <tr>
+      <td class='line'>117</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>118</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l118s0'>		return false;</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>119</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>	}</pre></td>
+    </tr>
+    <tr><td class='line'></td><td colspan='2'>&nbsp;</td></tr>
+    <tr>
+      <td class='line'></td><td>&nbsp;</td>
+      <td class='comment' onclick='showHideLines(this)'><div>	/**
 	 * このデータストア管理クラスが管理しているすべてのデータストアに対してトランザクションを終了します。&lt;p/>
 	 * トランザクション終了処理に失敗した場合、例外を送出します。
 	 * 
@@ -225,31 +336,83 @@ import static jp.co.dk.datastoremanager.message.DataStoreManagerMessage.*;
 	 */</div><span>	/*...*/</span></td>
     </tr>
     <tr>
-      <td class='line'>90</td><td>&nbsp;</td>
+      <td class='line'>127</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>	public void finishTrunsaction() throws DataStoreManagerException {</pre></td>
     </tr>
     <tr>
-      <td class='line'>91</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l91s0'>		this.defaultDataStore.finishTransaction();</pre></td>
+      <td></td><td class='count'>0</td>
+      <td class='paths'>
+        <span style='cursor:default; background-color:#ff0000' onclick='hidePath()'>Path coverage: 0/2</span>
+        <span class='uncovered' onclick="showPath(this,'l128s0 l134s0 l135s0 l139s0 l140s0 l143s0')">A: 0</span>
+        <span class='uncovered' onclick="showPath(this,'l128s0 l129s0 l130s0 l139s0 l140s0 l143s0')">B: 0</span>
+      </td>
     </tr>
     <tr>
-      <td class='line'>92</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l92s0'>		for (String name : dataStores.keySet()) {</pre></td>
+      <td class='line'>128</td><td class='count'>0</td>
+      <td><pre class='prettyprint jmp'>		<span id='l128s0' title='Executions: 0' class='uncovered'>if (this.hasError()) {</span></pre></td>
     </tr>
     <tr>
-      <td class='line'>93</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l93s0'>			this.dataStores.get(name).finishTransaction();</pre></td>
+      <td class='line'>129</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l129s0'>			this.defaultDataStore.rollback();</pre></td>
     </tr>
     <tr>
-      <td class='line'>94</td><td>&nbsp;</td>
+      <td class='line'>130</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l130s0'>			for (String name : dataStores.keySet()) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>131</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l131s0'>				this.dataStores.get(name).rollback();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>132</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>			}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>133</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		} else {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>134</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l134s0'>			this.defaultDataStore.commit();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>135</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l135s0'>			for (String name : dataStores.keySet()) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>136</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l136s0'>				this.dataStores.get(name).commit();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>137</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>			}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>138</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>		}</pre></td>
     </tr>
     <tr>
-      <td class='line'>95</td><td class='count'>0</td>
-      <td><pre class='prettyprint uncovered' id='l95s0'>	}</pre></td>
+      <td class='line'>139</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l139s0'>		this.defaultDataStore.finishTransaction();</pre></td>
     </tr>
     <tr>
-      <td class='line'>96</td><td>&nbsp;</td>
+      <td class='line'>140</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l140s0'>		for (DataStore dataStore : dataStores.values()) {</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>141</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l141s0'>			dataStore.finishTransaction();</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>142</td><td>&nbsp;</td>
+      <td><pre class='prettyprint'>		}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>143</td><td class='count'>0</td>
+      <td><pre class='prettyprint uncovered' id='l143s0'>	}</pre></td>
+    </tr>
+    <tr>
+      <td class='line'>144</td><td>&nbsp;</td>
       <td><pre class='prettyprint'>}</pre></td>
     </tr>
   </table>
